--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "alaska-email",
-  "version": "0.9.2",
+  "version": "0.10.0",
   "description": "Alaska email service",
   "keywords": [
     "alaska",
     "alaska-service"
   ],
-  "main": "lib/alaska-email.js",
+  "main": "index.js",
   "scripts": {
-    "build": "babel ./src --out-dir ./lib",
-    "watch": "babel ./src --out-dir ./lib -w",
-    "prebuild": "rimraf lib",
+    "build": "babel ./src --out-dir ./",
+    "watch": "babel ./src --out-dir ./ -w",
+    "prebuild": "rimraf lib api controllers config locales middlewares models sleds views",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -31,7 +31,7 @@
     "alaska": "*"
   },
   "dependencies": {
-    "alaska-field-html": "^0.9.1",
-    "alaska-field-mixed": "^0.9.1"
+    "alaska-field-html": "^0.10.0",
+    "alaska-field-mixed": "^0.10.0"
   }
 }
