--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alaska-email",
-  "version": "0.10.0",
+  "version": "0.10.1",
   "description": "Alaska email service",
   "keywords": [
     "alaska",
@@ -31,7 +31,8 @@
     "alaska": "*"
   },
   "dependencies": {
-    "alaska-field-html": "^0.10.0",
-    "alaska-field-mixed": "^0.10.0"
+    "alaska-field-filter": "^0.10.0",
+    "alaska-field-html": "^0.10.1",
+    "alaska-field-mixed": "^0.10.1"
   }
 }
